--- a/package.json
+++ b/package.json
@@ -41,5 +41,21 @@
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
+  },
+  "nyc": {
+    "include": [
+      "src/*.ts"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register/transpile-only"
+    ],
+    "reporter": [
+      "lcov"
+    ],
+    "sourceMap": true,
+    "instrument": true
   }
 }
